--- a/main.bib
+++ b/main.bib
@@ -975,6 +975,22 @@ MRREVIEWER = {Edgar H. Brown, Jr.},
   year={2017}
 }
 
+@article {Cohen,
+    AUTHOR = {Cohen, Ralph L.},
+     TITLE = {Odd primary infinite families in stable homotopy theory},
+   JOURNAL = {Mem. Amer. Math. Soc.},
+  FJOURNAL = {Memoirs of the American Mathematical Society},
+    VOLUME = {30},
+      YEAR = {1981},
+    NUMBER = {242},
+     PAGES = {viii+92},
+      ISSN = {0065-9266},
+   MRCLASS = {55Q45 (55T15)},
+  MRNUMBER = {603393},
+MRREVIEWER = {J. F. Adams},
+       URL = {https://doi.org/10.1090/memo/0242},
+}
+
 @book {ConnerFloyd,
     AUTHOR = {Conner, P. E. and Floyd, E. E.},
      TITLE = {The relation of cobordism to {$K$}-theories},
