improved takhtajan citation

--- a/main.bib
+++ b/main.bib
@@ -3945,12 +3945,19 @@ MRREVIEWER = {W. Stephen Wilson},
   MRNUMBER = {1886843},
 }
 
-@book{Takhtajan,
-  title={Quantum mechanics for mathematicians},
-  author={Takhtadzhian, Leon Armenovich},
-  volume={95},
-  year={2008},
-  publisher={American Mathematical Soc.}
+@book {Takhtajan,
+    AUTHOR = {Takhtajan, Leon A.},
+     TITLE = {Quantum mechanics for mathematicians},
+    SERIES = {Graduate Studies in Mathematics},
+    VOLUME = {95},
+ PUBLISHER = {American Mathematical Society, Providence, RI},
+      YEAR = {2008},
+     PAGES = {xvi+387},
+      ISBN = {978-0-8218-4630-8},
+   MRCLASS = {81-01 (37J05 47N50 70H05)},
+  MRNUMBER = {2433906},
+MRREVIEWER = {H. Hogreve},
+       URL = {https://doi.org/10.1090/gsm/095},
 }
 
 @incollection{Tate,
