rotate 4.6.2 to match 4.6.1

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -1113,19 +1113,19 @@ There is an isomorphism \[BS^1[p^j]_K \cong BS^1_K[p^j].\]
 The circle bundle \(S^1 \to BS^1[p^j] \to BS^1\) has associated Gysin sequence
 \begin{center}
 \begin{tikzcd}[row sep=0.6em]
-K_\Gamma^* BS^1 \arrow{rr}{- \smile [p^j](x)} & & K_\Gamma^* BS^1 \arrow{ld} \\
-& K_\Gamma^* BS^1[p^j] \arrow{lu}{\partial} ,
+K^* BS^1 \arrow{rr}{- \smile [p^j](x)} & & K^* BS^1 \arrow{ld} \\
+& K^* BS^1[p^j] \arrow{lu}{\partial} ,
 \end{tikzcd}
 \end{center}
-where \(x\) is any choice of coordinate on \(BS^1_{K_\Gamma} \cong \Gamma\).  Any \index{formal group!l series@\(\ell\)--series}\(p\)--series for \(\Gamma\) takes the form \([p](x) = c x^{p^d} + \cdots\) for \(c\) a unit.  Such an element is not a zero-divisor, so \(\partial\) vanishes, and this presents \(K_\Gamma^* BS^1[p^j]\) as the quotient ring \[K_\Gamma^* BS^1[p^j] \cong K_\Gamma^* BS^1 / [p^j](x). \qedhere\]
+where \(x\) is any choice of coordinate on \(BS^1_{K} \cong \Gamma\).  Any \index{formal group!l series@\(\ell\)--series}\(p\)--series for \(\Gamma\) takes the form \([p](x) = c x^{p^d} + \cdots\) for \(c\) a unit.  Such an element is not a zero-divisor, so \(\partial\) vanishes, and this presents \(K^* BS^1[p^j]\) as the quotient ring \[K^* BS^1[p^j] \cong K^* BS^1 / [p^j](x). \qedhere\]
 \end{proof}
 
 \begin{remark}\label{KHomologyOfClassifyingSpace}
 In the proof of the homological statement dual to \Cref{KtheoryConvertsTorsionToTorsion}, there is a corresponding exact sequence of Hopf algebras
 \begin{center}
-\begin{tikzcd}
-& K_* BS^1 \arrow{rd}{- \frown [p^j](x)} \\
-K_*(BS^1[p^j]) \arrow{ru} & & K_* BS^1, \arrow{ll}{\partial}
+\begin{tikzcd}[row sep=0.6em]
+K_* BS^1 \arrow["{- \frown [p^j](x)}", leftarrow]{rr} & & K_* BS^1 \arrow[leftarrow]{ld} \\
+& K_* BS^1[p^j] \arrow["\partial", leftarrow]{lu}
 \end{tikzcd}
 \end{center}
 where again \(\partial = 0\) and hence \(K_*(BS^1[p^j])\) is presented as the kernel of the map ``cap with \([p^j](x)\)''.  We will revisit this duality in the next Case Study.
