fix parens in diff'ls preceding 4.6.3

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -1131,10 +1131,10 @@ K_* BS^1 \arrow["{- \frown [p^j](x)}", leftarrow]{rr} & & K_* BS^1 \arrow[leftar
 where again \(\partial = 0\) and hence \(K_*(BS^1[p^j])\) is presented as the kernel of the map ``cap with \([p^j](x)\)''.  We will revisit this duality in the next Case Study.
 \end{remark}
 
-With this in hand, the analysis of the bar spectral sequence proceeds very much analogously to the example of the unstable dual Steenrod algebra of \Cref{UnstableContextsSection}.  We will analyze what \emph{must} happen in the bar spectral sequence \[\Tor^{K_* S^1[p^j]}_{*, *}(K_*, K_*) \Rightarrow K_* BS^1[p^j]\] in order to reach the conclusion of \Cref{KtheoryConvertsTorsionToTorsion}.  In the input to this spectral sequence, the ground algebra is given by a noncanonical isomorphism \[K_* \OS{H(S^1[p^j])}{0} \cong K_* \OS{H\Z/p^j}{0} = K_*[[1]] / ([1]^{p^j} - 1) = K_*[[1] - [0]] / \<[1] - [0]\>^{p^j}.\]  The \(\Tor\)--algebra for this truncated polynomial algebra \(K_*[\alpha_{()}] / \alpha_{()}^{p}\) is then given by the formula \[\Tor^{K_*[\alpha_{()}] / \alpha_{()}^{p^j}}_{*, *}(K_*, K_*) = \Lambda[\alpha'_{()}] \otimes \Gamma[\alpha_{()}],\] the combination of an exterior algebra and a divided power algebra.\footnote{In Ravenel--Wilson~\cite[Lemma 6.6]{RavenelWilsonKthyOfEMSpaces}, the elements \(\alpha_{()}\) and \(\alpha'_{()}\) are identified as a \idxentry{transpotence} and a \idxentry{homology suspension} respectively.}  We know which classes are supposed to survive this spectral sequence, and hence we know where the differentials must be:
+With this in hand, the analysis of the bar spectral sequence proceeds very much analogously to the example of the unstable dual Steenrod algebra of \Cref{UnstableContextsSection}.  We will analyze what \emph{must} happen in the bar spectral sequence \[\Tor^{K_* S^1[p^j]}_{*, *}(K_*, K_*) \Rightarrow K_* BS^1[p^j]\] in order to reach the conclusion of \Cref{KtheoryConvertsTorsionToTorsion}.  In the input to this spectral sequence, the ground algebra is given by a noncanonical isomorphism \[K_* \OS{H(S^1[p^j])}{0} \cong K_* \OS{H\Z/p^j}{0} = K_*[[1]] / ([1]^{p^j} - 1) = K_*[[1] - [0]] / \<[1] - [0]\>^{p^j}.\]  The \(\Tor\)--algebra for this truncated polynomial algebra \(K_*[\alpha_{()}] / \alpha_{()}^{p}\) is then given by the formula \[\Tor^{K_*[\alpha_{()}] / \alpha_{()}^{p^j}}_{*, *}(K_*, K_*) = \Lambda[\alpha'_{()}] \otimes \Gamma[\alpha_{()}],\] the combination of an exterior algebra and a divided power algebra.\footnote{In Ravenel--Wilson~\cite[Lemma 6.6]{RavenelWilsonKthyOfEMSpaces}, the elements \(\alpha_{()}\) and \(\alpha'_{()}\) are identified as a \idxentry{transpotence} and a \idxentry{homology suspension} respectively.}  We know which classes are supposed to survive this spectral sequence, and hence we know where the differentials must be~\cite[Section 8]{RavenelWilsonKthyOfEMSpaces}:
 \begin{align*}
-d(\alpha_{()})^{[p^{jd}]} & = \alpha'_{()}, \\
-\Rightarrow d(\alpha_{()})^{[i + p^{jd}]} & = \alpha'_{()} \cdot \alpha_{()}^{[i]}.
+d\left(\alpha_{()}^{[p^{jd}]}\right) & = \alpha'_{()}, \\
+\Rightarrow d\left(\alpha_{()}^{[i + p^{jd}]}\right) & = \alpha'_{()} \cdot \alpha_{()}^{[i]}.
 \end{align*}
 The spectral sequence collapses after this differential.  In the case \(1 < j < \infty\), there are some hidden multiplicative extensions in the spectral sequence, but these too are all determined by already knowing the multiplicative structure on \(K_* \OS{H(S^1[p^j])}{1}\).
 
