notational fixes in 4.6.16

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -1247,7 +1247,13 @@ Although the method of starting with the \(j = \infty\) case and deducing from i
 \end{remark}
 
 \begin{remark}
-\Cref{MainKThyOfEMSpacesTheorem} has a statement in the language of \Cref{UnstableAlgebraicModelSection}.  Rather than forming the algebraic approximation \[\AA(K, H) = K_*(\CP^\infty)_{K_*[H_*]}^{\circulatearrows}[H_* \CP^\infty]\] as usual, we form the modified version \[\AA_{p^j}(K, H) = K_*(\OS{H(S^1[p^j])}{1})_{K_*[H_*]}^{\circulatearrows}[H_* \OS{H(S^1[p^j])}{1}].\]  Using the same unstable Kronecker pairing, this supports a natural map to \(K_* \OS{H}{*}\), and a summary of this Lecture's results is that it is an isomorphism.  This auxiliary approximation has two interesting features: it makes use of \emph{odd}--dimensional Eilenberg--Mac Lane spaces, and it is an elaborate name for the alternating Hopf ring on a Hopf algebra.
+\Cref{MainKThyOfEMSpacesTheorem} has a statement in the language of \Cref{UnstableAlgebraicModelSection}.  Abbreviating \(H = H(S^1[p^j])\), rather than forming the algebraic approximation
+\begin{align*}
+\AA(K, H) & = K_*(\CP^\infty)_{K_*[H^*]}^{\circulatearrows}[H^* \CP^\infty]
+\intertext{as usual, we form the modified version}
+\AA_{p^j}(K, H) & = K_*(\OS{H}{1})_{K_*[H^*]}^{\circulatearrows}[H^* \OS{H}{1}].
+\end{align*}
+Using the same unstable Kronecker pairing, this supports a natural map to \(K_* \OS{H}{*}\), and a summary of this Lecture's results is that it is an isomorphism.  This auxiliary approximation has two interesting features: it makes use of \emph{odd}--dimensional Eilenberg--Mac Lane spaces, and it is an elaborate name for the alternating Hopf ring on the Hopf algebra \(K_* \OS{H}{1}\).
 \end{remark}
 
 
