move the definition of inverse-symmetric cocycle

--- a/sigma.tex
+++ b/sigma.tex
@@ -1335,8 +1335,9 @@ which reidentify the splitting \(kU \simeq kO \vee \Susp^2 kO\) in various equiv
 For \(E\) a complex-orientable ring spectrum with \(1/2 \in \pi_0 E\), we have
 \begin{align*}
 B\String_E & = C_3(\CP^\infty_E) / ([a, b, c] = -[-a, -b, -c]), \\
-\Spec E_0 B\String & = \left\{ f \in C^3(\CP^\infty_E; \Gm) \middle| f(a, b, c) = \frac{1}{f(-a, -b, -c)} \right\}.
+\Spec E_0 B\String & = \left\{ f \in C^3(\CP^\infty_E; \Gm) \middle| f(a, b, c) = \frac{1}{f(-a, -b, -c)} \right\} \\ & =: C^3_{\mathrm{is}}(\CP^\infty_E; \Gm),
 \end{align*}
+where \(C^3_{\mathrm{is}}(\CP^\infty_E; \sheaf I(0))\) is the indicated subscheme of \index{inverse symmetric function}\textit{inverse-symmetric} functions.
 \end{lemma}
 \begin{proof}[Proof sketch]
 This is a matter of translating the splittings above across \Cref{BU6Triumvirate}.  The complex-conjugation map \(\xi\) acts on \(C_k(\G)\) according to \[\xi[a_1, \ldots, a_n] = (-1)^n [-a_1, \ldots, -a_n],\] which encodes \(B\String_E\) as the quotient of \(BU[6, \infty)_E\) by \(\im P_-\).  Finally, the claim about the homological scheme follows from the description of the cohomological formal scheme by \index{formal group!Cartier dual}Cartier duality.
@@ -1364,7 +1365,7 @@ Still in the case where \(E\) is local away from \(2\), we can use this alternat
 For \(E\) a complex-orientable ring spectrum with \(1/2 \in \pi_0 E\), we have
 \begin{align*}
 B\String_E & = C_3(\CP^\infty_E) / ([a, b, -a-b] = 0), \\
-\Spec E_0 B\String & = \left\{ f \in C^3(\CP^\infty_E; \Gm) \middle| f(a, b, -a-b) = 1 \right\}. \pushQED\qed \qedhere \popQED
+\Spec E_0 B\String & = \left\{ f \in C^3(\CP^\infty_E; \Gm) \middle| f(a, b, -a-b) = 1 \right\}. \pushQED\qed\qedhere\popQED
 \end{align*}
 \end{corollary}
 
@@ -1578,9 +1579,9 @@ This is a culmination of the above calculations.  As argued at the beginning of 
 Let \(\G\) be a formal group over a perfect field of characteristic \(2\), and assume \(\height \G \le 2\).  For \(E\) the associated Morava \(K\)--theory\index{Morava K theory@Morava \(K\)--theory} or \(E\)--theory, there are isomorphisms
 \begin{align*}
 \Spec E_0 M\String & \xrightarrow\cong \Sigma^3(\CP^\infty_E; \sheaf I(0)), &
-\Spec E_0 M\Spin & \xrightarrow\cong C^2_{\mathrm{is}}(\CP^\infty_E; \sheaf I(0)),
+\Spec E_0 M\Spin & \xrightarrow\cong C^2_{\mathrm{is}}(\CP^\infty_E; \sheaf I(0)).
 \end{align*}
-where \(C^2_{\mathrm{is}}(\CP^\infty_E; \sheaf I(0))\) is the subscheme of \(C^2(\CP^\infty_E; \sheaf I(0))\) consisting of those \index{inverse symmetric function}\textit{inverse-symmetric} functions satisfying \(f(x, y) / f(-_{\G} x, -_{\G} y) = 1\).  The \(E_0\)--points of these schemes biject with ring spectrum maps \(M\String \to E\) and \(M\Spin \to E\) respectively.\footnote{This is sufficient to conclude the existence of the Atiyah--Bott--Shapiro orientation in the homotopy category.} \qed
+The \(E_0\)--points of these schemes biject with ring spectrum maps \(M\String \to E\) and \(M\Spin \to E\) respectively.\footnote{This is sufficient to conclude the existence of the Atiyah--Bott--Shapiro orientation in the homotopy category.} \qed
 \end{theorem}
 \begin{proof}
 Our goal all along was to use the algebraic model to govern the bar spectral sequences 
