--- a/sigma.tex
+++ b/sigma.tex
@@ -1420,7 +1420,7 @@ since \(\Sigma^2(\CP^\infty_E; \Gm)\) is defined to be the closed subscheme of \
 
 The ordinary homology of \(\Spin/\SU\) is free and even, so it suffices to check that this map is null in the case \(E = H\Z_{(2)}\), since one can then conclude the general case by the Atiyah--Hirzebruch spectral sequence.  Manual calculation in a Serre spectral sequence shows gives the calculation \[H\Z_{(2)}{}_*(\Spin/\SU) \cong \Gamma_{\Z_{(2)}}[a_{2n+1} \mid n \ge 1]\] as well as that the homological maps induced by \(i\) and \(j\) are respectively injective and surjective.  In particular, we need only check that the above composite is zero on \(H\Z_{(2)}\)--homology after postcomposition with \(H_*(i)\).  The \(\SU\)--bundle classified by postcomposition with \(i\) is \[(1 - \L)(1 - \overline \L) - (1 - \overline \L)(1 - \L),\] which is itself trivial, hence the classifying map is null and so must be the map on homology.
 
-We are left with showing that the factorized map is an isomorphism, and again appealing to Atiyah--Hirzebruch spectral sequences it suffices to show this in the case \(E = \HFtwo\).  The diagram considered above extends as follows:
+We are left with showing that the factorized map is an injection, and again appealing to Atiyah--Hirzebruch spectral sequences it suffices to show this in the case \(E = \HFtwo\).  The diagram considered above extends as follows:
 \begin{center}
 \begin{tikzcd}
 \Spec \HFtwo P_0 B\SU \arrow["\HFtwo P_0 i"]{r} \arrow[equal]{d} & \Spec \HFtwo P_0 \Spin/\SU \arrow["\HFtwo P_0 j"]{r} \arrow[densely dotted]{d} & \Spec \HFtwo P_0 B\SU \arrow[equal]{d} \\
@@ -1465,7 +1465,7 @@ The map \[\Spec \Gamma_{\Z_{(2)}}[a_{2n + 1} \mid n \ge 1] \to \Sigma^2(\G_a; \G
 \begin{proof}[Proof sketch]
 This is a combination of three observations:
 \begin{enumerate}
-    \item For \(\G\) arbitrary and \(f \in \Sigma^2(\G; \Gm)\) which expands in a coordinate to \[1 + b c_{2^m} + \cdots,\] then \(b = 0\) as an element of \(B[1/2]\) and of \(B/2\).
+    \item For \(\G\) arbitrary, if \(f \in \Sigma^2(\G; \Gm)\) expands in a coordinate to \[1 + b c_{2^m} + \cdots,\] then \(b = 0\) as an element of \(B[1/2]\) and of \(B/2\).
     \item For any \(f \in \Sigma^2(\G_a; \Gm)\) with expansion \(1 + b c_n + \cdots\), \(b^2 \equiv 0 \pmod{2}\).
     \item Modulo \(2\), the putative universal product series above decomposes further as \[\prod_{n \ge 1} \left(\prod_{j \ge 0} (1 + a_{2n+1}^{[2^j]} \cdot c_{(2n+1)2^j})\right). \qedhere\]
 \end{enumerate}
