--- a/cooperations.tex
+++ b/cooperations.tex
@@ -183,7 +183,7 @@ We now apply this philosophy to our example:
 \[\mathcal A_* = \F_2[\xi_0, \xi_1, \xi_2, \ldots]/(\xi_0 = 1).\]
 \end{corollary}
 \begin{proof}
-We approach via the system \[\HFtwo_* \HFtwo \cong \colim\left( \cdots \to \widetilde{\HFtwo}_{*+j} \OS{\HFtwo}{j} \to \widetilde{\HFtwo}_{*+(j+1)} \OS{\HFtwo}{j+1} \to \cdots \right).\]  First, note that each map in the system factors through the \(\ast\)--indecomposables: the composite \[\Susp(\OS{E}{j} \times \OS{E}{j}) \to \Susp \OS{E}{j} \to \OS{E}{k+1}\] vanishes on \(E\)--homology for the same reason that suspension kills the cup product~\cite[Corollary 2.18]{BJW}, \cite[Proposition 13.65]{Switzer}.  We may therefore replace this system with \[\HFtwo_* \HFtwo \cong \colim\left( \cdots \to Q^* \HFtwo_{*+j} \OS{\HFtwo}{j} \to Q^* \HFtwo_{*+(j+1)} \OS{\HFtwo}{j+1} \to \cdots \right).\]  \Cref{CalculationOfUnstableSteenrodHopfRing} gives us unfettered access to the \(\ast\)--indecomposables:
+We approach via the system \[\HFtwo_* \HFtwo \cong \colim\left( \cdots \to \widetilde{\HFtwo}_{*+j} \OS{\HFtwo}{j} \to \widetilde{\HFtwo}_{*+(j+1)} \OS{\HFtwo}{j+1} \to \cdots \right).\]  First, note that each map in the system factors through the \(\ast\)--indecomposables: the composite \[\Susp(\OS{E}{j} \times \OS{E}{j}) \to \Susp \OS{E}{j} \to \OS{E}{j+1}\] vanishes on \(E\)--homology for the same reason that suspension kills the cup product~\cite[Corollary 2.18]{BJW}, \cite[Proposition 13.65]{Switzer}.  We may therefore replace this system with \[\HFtwo_* \HFtwo \cong \colim\left( \cdots \to Q^* \HFtwo_{*+j} \OS{\HFtwo}{j} \to Q^* \HFtwo_{*+(j+1)} \OS{\HFtwo}{j+1} \to \cdots \right).\]  \Cref{CalculationOfUnstableSteenrodHopfRing} gives us unfettered access to the \(\ast\)--indecomposables:
 \begin{align*}
 Q^\ast \HFtwo_* \OS{\HFtwo}{*} & \cong \F_2\left\{\alpha_{I} \middle| \text{\(I\) a multi-index}\right\} \\
 & = \F_2\left\{ \alpha_{(I_0)} \circ \alpha_{(I_1)} \circ \cdots \circ \alpha_{(I_n)} \middle| \text{\(I = (I_0, \ldots, I_n)\) a multi-index}\right\}.
