fix crossing over error in A.4.7

--- a/powerops.tex
+++ b/powerops.tex
@@ -980,7 +980,7 @@ The natural equivalence \[(\GL_1 R)[1, \infty) \to (\Loops^\infty R)[1, \infty)\
 \begin{center}
 \begin{tikzcd}
 & \Phi_d (\GL_1 R)[1, \infty) \arrow["\simeq"]{r} & \Phi_d (\Loops^\infty R)[1, \infty) \\
-\gl_1 R \arrow{r} \arrow[bend left=15, "\ell_d" near end]{rr} & \widehat L_d \gl_1 R \arrow["\simeq"]{r} \arrow[equal, crossing over]{u} & \widehat L_d R \arrow[equal, crossing over]{u} .
+\gl_1 R \arrow{r} \arrow[bend right=15, "\ell_d" description]{rr} & \widehat L_d \gl_1 R \arrow["\simeq"]{r} \arrow[equal, crossing over]{u} & \widehat L_d R \arrow[equal, crossing over]{u} .
 \end{tikzcd}
 \end{center}
 \end{definition}
