cite secret AHR document

--- a/main.bib
+++ b/main.bib
@@ -222,6 +222,12 @@ MRREVIEWER = {Mark Hovey},
   note = {\url{http://www.math.illinois.edu/~mando/papers/koandtmf.pdf}, Accessed: 2016-11-16}
 }
 
+@ARTICLE{AHRMoments,
+  author = {Ando, Matthew and Hopkins, M. J. and Rezk, Charles},
+  title = {Moments of {M}easures on {$\mathbb Z^\times_p$}, with {A}pplications to {M}aps between {$p$}--adic {$K$}--theory {S}pectra},
+  note = {Unpublished}
+}
+
 @article {AHSHinfty,
     AUTHOR = {Ando, Matthew and Hopkins, Michael J. and Strickland, Neil P.},
      TITLE = {The sigma orientation is an {$H_\infty$} map},
