fix missing superscript

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -87,7 +87,7 @@ For \(p > 3\), these bounds pass through each other and there is no satisfying v
 
 This procedure of passing to (higher-order) vector bundles, as in the Kreck--Stolz construction, is embodied by passing from a ring spectrum to its algebraic \(K\)--theory spectrum.  There are on-going research programs with the goal of demonstrating that the algebraic \(K\)--theory of a ring spectrum of ``chromatic complexity \(d\)'' is itself of chromatic complexity one larger, as in the transition from \(kO\) to \(\tmf\).  This is one instance of a family of operations that (conjecturally) modulate chromatic height; such operations that raise height are called \textit{redshifting}, and operations that lower height are called \textit{blueshifting}, in reference to the periodicity perspective of \Cref{CdEqualsDd}.
 
-As an example of a blueshifting construction, an important observation of Ando, Morava, and Sadofsky~\cite{AMS} is that the \(C_p\)--Tate construction on the ring spectrum \(E(d)\) is a variant of \(E(d-1)\).\footnote{Somewhat more specifically, it gives \(E(d-1)\) with homotopy tensored up by a quite \emph{large} ring.}  In fact, Hovey, Sadofsky, and Kuhn show that something similar happens quite generally: if \(R\) is an \(E(d)\)--local ring spectrum and \(G\) is a finite \(p\)--group, then the Tate object \(R^{tG}\) is an \(E(d-1)\)--local ring spectrum.  For a striking example of this phenomenon, we consider the case of the \(2\)--adic sphere spectrum, which is \(K(\infty)\)--local.  We specialize to the case \(G = C_2\) in order to perform an explicit analysis of \(\S^{tC_2}\), which belongs to a stable fiber sequence \[\S^{hC_2} \to \S^{tC_2} \to \Susp \S_{hC_2}.\]  The orbit spectrum can be identified as \[\S_{hC_2} \simeq \Susp^\infty_+ EC_2 / C_2 = \Susp^\infty_+ BC_2 \simeq \Susp^\infty_+ \RP^\infty,\] and similarly we can identify the fixed point spectrum as \[\S^{hC_2} \simeq F_{C_2}(\Susp^\infty_+ EC_2, \S) \simeq D\Susp\infty_+ \RP^\infty.\]  A remarkable theorem of Atiyah~\cite{Atiyah} presents the Spanier--Whitehead dual of projective space.  First, the calculation \(T(\mathcal L \downarrow \RP^n) = \RP^{n+1}\) of \Cref{RPnThomExample} extends by the formula \(T(m \mathcal L \downarrow \RP^n) = \Susp^\infty_+ \RP^{n+m} / \RP^{m-1}\) to positive values of \(m\), and the same formula can be used to \emph{define} complexes \(\RP^n_m\) for negative values of \(m\).  Then, Atiyah demonstrates the formula \[D \RP^{n-1}_m \simeq \Susp \RP^{m-1}_n.\]  In our case, we thus calculate
+As an example of a blueshifting construction, an important observation of Ando, Morava, and Sadofsky~\cite{AMS} is that the \(C_p\)--Tate construction on the ring spectrum \(E(d)\) is a variant of \(E(d-1)\).\footnote{Somewhat more specifically, it gives \(E(d-1)\) with homotopy tensored up by a quite \emph{large} ring.}  In fact, Hovey, Sadofsky, and Kuhn show that something similar happens quite generally: if \(R\) is an \(E(d)\)--local ring spectrum and \(G\) is a finite \(p\)--group, then the Tate object \(R^{tG}\) is an \(E(d-1)\)--local ring spectrum.  For a striking example of this phenomenon, we consider the case of the \(2\)--adic sphere spectrum, which is \(K(\infty)\)--local.  We specialize to the case \(G = C_2\) in order to perform an explicit analysis of \(\S^{tC_2}\), which belongs to a stable fiber sequence \[\S^{hC_2} \to \S^{tC_2} \to \Susp \S_{hC_2}.\]  The orbit spectrum can be identified as \[\S_{hC_2} \simeq \Susp^\infty_+ EC_2 / C_2 = \Susp^\infty_+ BC_2 \simeq \Susp^\infty_+ \RP^\infty,\] and similarly we can identify the fixed point spectrum as \[\S^{hC_2} \simeq F_{C_2}(\Susp^\infty_+ EC_2, \S) \simeq D\Susp^\infty_+ \RP^\infty.\]  A remarkable theorem of Atiyah~\cite{Atiyah} presents the Spanier--Whitehead dual of projective space.  First, the calculation \(T(\mathcal L \downarrow \RP^n) = \RP^{n+1}\) of \Cref{RPnThomExample} extends by the formula \(T(m \mathcal L \downarrow \RP^n) = \Susp^\infty_+ \RP^{n+m} / \RP^{m-1}\) to positive values of \(m\), and the same formula can be used to \emph{define} complexes \(\RP^n_m\) for negative values of \(m\).  Then, Atiyah demonstrates the formula \[D \RP^{n-1}_m \simeq \Susp \RP^{m-1}_n.\]  In our case, we thus calculate
 \begin{center}
 \begin{tikzcd}
 \S^{hC_2} \arrow{r} \arrow[equal]{d} & \S^{tC_2} \arrow{r} \arrow[equal]{d} & \Susp \S_{hC_2} \arrow[equal]{d} \\
