--- a/quillen.tex
+++ b/quillen.tex
@@ -758,7 +758,7 @@ The real miracle is that these cyclic Tate power operations are not only additiv
 The assignment \(X \mapsto \pi_0 (E^{(\Susp^\infty_+ X)^{\sm p}})^{tC_p}\) is a cohomology theory.
 \end{lemma}
 \begin{proof}
-The Eilenberg--Steenrod axioms are clear except for the cofiber sequence axiom, which we will boil down to checking that the assignment \(X \mapsto (X^{\sm p})^{tC_p}\) preserves cofiber sequences of finite complexes.  A cofiber sequence \(X \to Y \to Y/X\) of pointed spaces is equivalent data to the diagram \[X \to Y,\] which has colimit \(Y\) and which admits a filtration by distance from the initial node with filtration quotients:
+The Eilenberg--Steenrod axioms are clear except for the cofiber sequence axiom, which we will boil down to checking that the assignment \(X \mapsto (X^{\sm p})^{tC_p}\) preserves cofiber sequences of finite complexes.  A cofiber sequence \[X \to Y \to Y/X\] of pointed spaces is equivalent data to the diagram \[X \to Y,\] which has colimit \(Y\) and which admits a filtration by distance from the initial node with filtration quotients:
 \begin{center}
 \begin{tikzcd}
 X \arrow{r} & Y \\
@@ -862,7 +862,7 @@ where we have expanded out some of the pieces of the total symmetric Chern class
 \end{remark}
 
 \begin{definition}[{\cite[Theorem I.5.1]{AdamsBlueBook}}]
-Take the orientation to be \(MU \xrightarrow{1} MU\), so that we are considering \(MU^* MU\) and the Landweber--Novikov operations arising from the Conner--Floyd--Chern classes.  These account for the \emph{stable} operations in \(MU\)--cohomology, analogous to the Steenrod operations for \(\HFtwo\).  They satisfy the following properties:
+Take \(MU \xrightarrow{1} MU\) as the orientation, so that we are considering \(MU^* MU\) and the Landweber--Novikov operations arising from the Conner--Floyd--Chern classes.  These account for the \emph{stable} operations in \(MU\)--cohomology, analogous to the Steenrod operations for \(\HFtwo\).  They satisfy the following properties:
 \begin{itemize}
 \item \(s_0\) is the identity.
 \item \(s_\alpha\) is natural: \(s_\alpha(f^* x) = f^*(s_\alpha x)\).
