add second stapleton citation, blurb about L_Gamma being blueshifting

--- a/main.bib
+++ b/main.bib
@@ -3718,6 +3718,21 @@ archivePrefix = "arXiv",
   publisher={Mathematical Sciences Publishers}
 }
 
+@Article{StapletonTwisted,
+author="Stapleton, Nathaniel",
+title="Transchromatic twisted character maps",
+journal="Journal of Homotopy and Related Structures",
+year="2015",
+month="Mar",
+day="01",
+volume="10",
+number="1",
+pages="29--61",
+issn="1512-2891",
+doi="10.1007/s40062-013-0040-9",
+url="https://doi.org/10.1007/s40062-013-0040-9"
+}
+
 @article{SteenrodCyclic,
   title={Cyclic reduced powers of cohomology classes},
   author={Steenrod, NE},
