--- a/cooperations.tex
+++ b/cooperations.tex
@@ -643,8 +643,8 @@ Consider the case that \(A\) is torsion-free, and set \(K = A \otimes \Q\) so th
 \begin{center}\vspace{-0.8\baselineskip}
 \begin{tikzcd}[column sep=0.5em, row sep=0.5em]
 0 \arrow{r} & \left\{\begin{array}{c}\text{integrals} \\ \text{with \(A\)} \\ \text{coeff\textsuperscript{s}}\end{array}\right\} \arrow{r} \arrow[equal]{d} & \left\{\begin{array}{c}\text{all formal integrals} \\ \text{of differentials} \\ \text{defined over \(A\)}\end{array}\right\} \arrow{r} \arrow[equal]{d} & \left\{\begin{array}{c}\text{missing} \\ \text{integrals}\end{array}\right\} \arrow{r} \arrow[equal]{d} & 0 \\
-0 \arrow{r} & x A\ps{x} \arrow{r} & \{f \in x K\ps{x} \mid \mathrm{d}f \in A\ps{x}\dx\} \arrow{r}{d} & H^1_{dR}(\G/A) \arrow{r} & 0 \\
-0 \arrow{r} & x A\ps{x} \arrow{r} \arrow[equal]{u} & \left\{ f \in x K\ps{x} \middle| \begin{array}{c} \mathrm{d}f \in A\ps{x}\dx, \\ \delta f \in A\ps{x,y} \end{array} \right\} \arrow{u} \arrow{r}{d} & PH^1_{dR}(\G/A) \arrow{r} \arrow{u} & 0,
+0 \arrow{r} & x A\ps{x} \arrow{r} & \{f \in x K\ps{x} \mid \mathrm{d}f \in A\ps{x}\dx\} \arrow{r}{\mathrm{d}} & H^1_{dR}(\G/A) \arrow{r} & 0 \\
+0 \arrow{r} & x A\ps{x} \arrow{r} \arrow[equal]{u} & \left\{ f \in x K\ps{x} \middle| \begin{array}{c} \mathrm{d}f \in A\ps{x}\dx, \\ \delta f \in A\ps{x,y} \end{array} \right\} \arrow{u} \arrow{r}{\mathrm{d}} & PH^1_{dR}(\G/A) \arrow{r} \arrow{u} & 0,
 \end{tikzcd}
 \end{center}
 where \(x\) is a coordinate on \(\G\), and \(\delta\) is defined by \(\delta f = (\mu^* - \pi_1^* - \pi_2^*)f\).
