--- a/finite.tex
+++ b/finite.tex
@@ -40,7 +40,7 @@ These will occupy our attention for the first half of this Case Study.  In the s
 
 \section{Descent and the context of a spectrum}\label{StableContextLecture}
 
-In \Cref{HopfAlgebraLecture} we took for granted the \(\HFtwo\)--Adams spectral sequence, which had the form \[E_2^{*, *} = H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); \widetilde{\HFtwo P_0 X}) \Rightarrow \pi_* X^\wedge_2,\] where we had already established some yoga by which we could identify the dual Steenrod coaction on \(\HFtwo P_0 X\) with an action of \(\InternalAut{\G_a}\) on its associated quasicoherent sheaf over \(\Spec \F_2\).  Our goal in this Lecture is to revise this tool to work for other ring spectra \(E\) and target spectra \(X\), eventually arriving at a spectral sequence with signature \[E_2^{*, *} = H^*(\context{E}; \context{E}(X)) \Rightarrow \pi_* X.\]  In particular, we will encounter along the way the object ``\(\context{E}\)'' envisioned in the introduction to this Case Study.
+In \Cref{HopfAlgebraLecture} we took for granted the \(\HFtwo\)--Adams spectral sequence, which had the form \[E_2^{*, *} = H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); \widetilde{\HFtwo P_0 X}) \Rightarrow \pi_* X^\wedge_2,\] where we had already established some yoga by which we could identify the dual Steenrod coaction on \(\HFtwo P_0 X\) with an action of \(\InternalAut{\G_a}\) on its associated quasicoherent sheaf over \(\Spec \F_2\).  Our goal in this Lecture is to revise this tool to work for other ring spectra \(E\) and target spectra \(X\), eventually arriving at a spectral sequence with signature \[E_2^{*, *} = H^*(\context{E}; \context{E}(X)) \Rightarrow \pi_* X^\wedge_E.\]  In particular, we will encounter along the way the object ``\(\context{E}\)'' envisioned in the introduction to this Case Study.
 
 At a maximum level of vagueness, we are seeking a process by which homotopy groups \(\pi_* X\) can be recovered from \(E\)--homology groups \(E_* X\).  Recognizing that \(X\) can be thought of as an \(\S\)--module and \(E \sm X\) can be thought of as its base change to an \(E\)--module, we are inspired to double back and consider as inspiration a completely algebraic analogue of the same situation.  Given a ring map \(f\co R \to S\) and an \(S\)--module \(N\), Grothendieck's framework of \index{descent!faithfully flat}\textit{(faithfully flat) descent} addresses the following questions:
 \begin{enumerate}
